syntax = "proto3";

package wellKnown;

import "google/protobuf/wrappers.proto";

service Greeter {
	rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
	google.protobuf.StringValue name = 1;
}

message HelloReply {
	google.protobuf.StringValue message = 1;
}